@@ -36,6 +36,7 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.FutureTask;
+import java.util.function.Function;
 import javax.swing.Action;
 import javax.swing.BorderFactory;
 import javax.swing.ButtonGroup;
@@ -73,6 +74,7 @@ import org.weasis.core.api.media.data.Thumbnail;
 import org.weasis.core.api.util.FontItem;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.OtherIcon;
+import org.weasis.core.api.util.ResourceUtil.ResourceIconPath;
 import org.weasis.core.ui.docking.PluginTool;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerEvent;
@@ -88,6 +90,7 @@ import org.weasis.core.ui.util.TitleMenuItem;
 import org.weasis.core.ui.util.WrapLayout;
 import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.DicomSpecialElement;
+import org.weasis.dicom.codec.HiddenSeriesManager;
 import org.weasis.dicom.codec.KOSpecialElement;
 import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.TagD.Level;
@@ -128,14 +131,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       new ArrayListComboBoxModel<>(DicomSorter.STUDY_COMPARATOR);
   private final JComboBox<?> patientCombobox = new JComboBox<>(modelPatient);
   private final JComboBox<?> studyCombobox = new JComboBox<>(modelStudy);
-  private final transient ItemListener patientChangeListener =
-      e -> {
-        if (e.getStateChange() == ItemEvent.SELECTED) {
-          selectPatient(getSelectedPatient());
-          selectedPatient.revalidate();
-          selectedPatient.repaint();
-        }
-      };
   private final transient ItemListener studyItemListener =
       e -> {
         if (e.getStateChange() == ItemEvent.SELECTED) {
@@ -165,6 +160,14 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     setDockableWidth(Math.max(thumbnailSize, Thumbnail.DEFAULT_SIZE) + 42);
 
     patientCombobox.setMaximumRowCount(15);
+    ItemListener patientChangeListener =
+        e -> {
+          if (e.getStateChange() == ItemEvent.SELECTED) {
+            selectPatient(getSelectedPatient());
+            selectedPatient.revalidate();
+            selectedPatient.repaint();
+          }
+        };
     patientCombobox.addItemListener(patientChangeListener);
     studyCombobox.setMaximumRowCount(15);
     // do not use addElement
@@ -210,7 +213,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup patient = model.getParent(study, DicomModel.patient);
     List<StudyPane> studies = patient2study.get(patient);
     if (studies != null) {
-      for (int i = 0; i < studies.size(); i++) {
+      for (int i = studies.size() - 1; i >= 0; i--) {
         StudyPane st = studies.get(i);
         if (st.isStudy(study)) {
           studies.remove(i);
@@ -238,7 +241,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup study = model.getParent(series, DicomModel.study);
     List<SeriesPane> seriesList = study2series.get(study);
     if (seriesList != null) {
-      for (int j = 0; j < seriesList.size(); j++) {
+      for (int j = seriesList.size() - 1; j >= 0; j--) {
         SeriesPane se = seriesList.get(j);
         if (se.isSeries(series)) {
           seriesList.remove(j);
@@ -412,7 +415,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   private MediaSeriesGroup getFirstStudy(MediaSeriesGroup patientGroup) {
     List<StudyPane> studyList = getStudyList(patientGroup);
     if (studyList != null && !studyList.isEmpty()) {
-      return studyList.get(0).dicomStudy;
+      return studyList.getFirst().dicomStudy;
     }
     return null;
   }
@@ -530,7 +533,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         for (StudyPane studyPane : studyList) {
           List<SeriesPane> seriesList = study2series.get(studyPane.dicomStudy);
           if (seriesList != null && !seriesList.isEmpty()) {
-            return seriesList.get(0).sequence;
+            return seriesList.getFirst().sequence;
           }
         }
       }
@@ -656,8 +659,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     private void refreshLayout() {
       this.setLayout(
           verticalLayout
-              ? new MigLayout("fillx, flowy, insets 0", "[fill]")
-              : new MigLayout("fillx, flowx, insets 0", "[fill]"));
+              ? new MigLayout("fillx, flowy, insets 0", "[fill]") // NON-NLS
+              : new MigLayout("fillx, flowx, insets 0", "[fill]")); // NON-NLS
       List<StudyPane> studies = getStudyPaneList();
       super.removeAll();
       for (StudyPane studyPane : studies) {
@@ -711,17 +714,33 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       this.setBorder(
           BorderFactory.createCompoundBorder(GuiUtils.getEmptyBorder(0, 3, 0, 3), title));
       this.setFocusable(false);
-      this.add(sub, "shrinky 100");
+      this.add(sub, "shrinky 100"); // NON-NLS
       this.addComponentListener(
           new ComponentAdapter() {
             @Override
             public void componentResized(ComponentEvent e) {
-              WrapLayout wl = (WrapLayout) sub.getLayout();
-              sub.setPreferredSize(wl.preferredLayoutSize(sub));
+              refreshLayout();
               StudyPane.this.revalidate();
               StudyPane.this.getParent().repaint();
             }
           });
+    }
+
+    @Override
+    public void remove(int index) {
+      sub.remove(index);
+      refreshLayout();
+    }
+
+    @Override
+    public void remove(Component comp) {
+      sub.remove(comp);
+      refreshLayout();
+    }
+
+    public void refreshLayout() {
+      WrapLayout wl = (WrapLayout) sub.getLayout();
+      sub.setPreferredSize(wl.preferredLayoutSize(sub));
     }
 
     public boolean isSeriesVisible(MediaSeriesGroup series) {
@@ -786,7 +805,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     public SeriesPane(MediaSeriesGroup sequence) {
       this.sequence = Objects.requireNonNull(sequence);
-      this.setLayout(new MigLayout("wrap 1", "[center]"));
+      this.setLayout(new MigLayout("wrap 1", "[center]")); // NON-NLS
       this.setBackground(FlatUIUtils.getUIColor(SeriesSelectionModel.BACKGROUND, Color.LIGHT_GRAY));
       int thumbnailSize =
           GuiUtils.getUICore()
@@ -871,10 +890,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
                 selectedPatient == null ? null : selectedPatient.patient;
             if (patient != null && e.getSource() instanceof JButton button) {
               List<KOSpecialElement> list =
-                  DicomModel.getSpecialElements(patient, KOSpecialElement.class);
+                  HiddenSeriesManager.getHiddenElementsFromPatient(KOSpecialElement.class, patient);
               if (!list.isEmpty()) {
                 if (list.size() == 1) {
-                  model.openRelatedSeries(list.get(0), patient);
+                  model.openRelatedSeries(list.getFirst(), patient);
                 } else {
                   list.sort(DicomSpecialElement.ORDER_BY_DATE);
                   JPopupMenu popupMenu = new JPopupMenu();
@@ -954,7 +973,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       studyCombobox.addItemListener(studyItemListener);
       selectStudy();
-      koOpen.setVisible(DicomModel.hasSpecialElements(patient, KOSpecialElement.class));
+      koOpen.setVisible(
+          HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
       // Send message for selecting related plug-ins window
       model.firePropertyChange(
           new ObservableEvent(ObservableEvent.BasicAction.SELECT, model, null, patient));
@@ -1027,9 +1047,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           k++;
         }
       }
-
       studyPane.revalidate();
       studyPane.repaint();
+      changeToolWindowAnchor(getDockable().getBaseLocation());
     } else {
       int k = 1;
       for (SeriesPane s : seriesList) {
@@ -1074,7 +1094,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   private void addDicomSeries(Series<?> series) {
-    if (DicomModel.isSpecialModality(series)) {
+    if (DicomModel.isHiddenModality(series)) {
       // Up to now nothing has to be done in the explorer view about specialModality
       return;
     }
@@ -1212,7 +1232,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
               MediaSeriesGroup study = model.getParent(dcm, DicomModel.study);
               StudyPane studyPane = getStudyPane(study);
               if (studyPane != null) {
-                if (!DicomModel.isSpecialModality(dcm)) {
+                if (!DicomModel.isHiddenModality(dcm)) {
                   SeriesPane pane = getSeriesPane(dcm);
                   if (pane != null) {
                     pane.updateText();
@@ -1233,7 +1253,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           } else if (newVal instanceof KOSpecialElement) {
             MediaSeriesGroupNode patient = getSelectedPatient();
             if (patient != null) {
-              koOpen.setVisible(DicomModel.hasSpecialElements(patient, KOSpecialElement.class));
+              koOpen.setVisible(
+                  HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
             }
           }
         } else if (ObservableEvent.BasicAction.LOADING_START.equals(action)) {
@@ -1247,7 +1268,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           }
           MediaSeriesGroupNode patient = getSelectedPatient();
           if (patient != null) {
-            koOpen.setVisible(DicomModel.hasSpecialElements(patient, KOSpecialElement.class));
+            koOpen.setVisible(
+                HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
           }
         }
       } else if (evt.getSource() instanceof SeriesViewer
@@ -1306,32 +1328,31 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public synchronized void addTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              loadingPanel.addTask(task);
-              revalidate();
-              repaint();
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          loadingPanel.addTask(task);
+          revalidate();
+          repaint();
+        });
   }
 
   public synchronized void removeTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              if (loadingPanel.removeTask(task)) {
-                revalidate();
-                repaint();
-              }
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          if (loadingPanel.removeTask(task)) {
+            revalidate();
+            repaint();
+          }
+        });
   }
 
   public static SeriesThumbnail createThumbnail(
-      final Series series, final DicomModel dicomModel, final int thumbnailSize) {
+      final Series<?> series, final DicomModel dicomModel, final int thumbnailSize) {
 
     Callable<SeriesThumbnail> callable =
         () -> {
-          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize);
+          Function<String, Set<ResourceIconPath>> drawIcons = HiddenSeriesManager::getRelatedIcons;
+          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize, drawIcons);
           if (series.getSeriesLoader() instanceof LoadSeries loader) {
             // In case series is downloaded or canceled
             thumb.setProgressBar(loader.isDone() ? null : loader.getProgressBar());
@@ -1344,7 +1365,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           return thumb;
         };
     FutureTask<SeriesThumbnail> future = new FutureTask<>(callable);
-    GuiExecutor.instance().invokeAndWait(future);
+    GuiExecutor.invokeAndWait(future);
     SeriesThumbnail result = null;
     try {
       result = future.get();
